# electric-maple

./: .gitignore  .gitmodules  README.md
client/: CMakeLists.txt  KNOWN_ISSUES.md  build.gradle  common.sh
client/app/: build.gradle
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/plutovr/electricmaple/client/: StreamingActivity.kt  StreamingApplication.kt
client/app/src/main/java/com/plutovr/electricmaple/standalone_client/: StreamingActivity.kt
client/app/src/main/res/values/: strings.xml
client/egl/em/: em_egl.cpp
client/gradle/wrapper/: gradle-wrapper.properties
client/gstreamer_android/: gstreamer_android.c
client/gstreamer_java/: build.gradle
client/src/: CMakeLists.txt  EglData.cpp  main.cpp
client/src/em/: CMakeLists.txt  em_app_log.h  em_connection.c  em_connection.h  em_frame_data.cpp  em_frame_data.hpp  em_id_data_accumulator.hpp  em_remote_experience.cpp  em_remote_experience.h  em_sample.h  em_stream_client.c  em_stream_client.h  gst_common.h
client/src/em/render/: GLDebug.cpp  GLError.cpp  GLSwapchain.cpp  GLSwapchain.h  em_egl_context.c  em_egl_context.h  gl_debug.cpp  gl_error.cpp  gl_error.h  gl_swapchain.cpp  gl_swapchain.h  render.cpp  render.hpp  xr_platform_deps.h
client/src/render/: EglData.cpp  EglData.hpp  GLDebug.cpp  GLDebug.h
proto/: README.md  electricmaple.proto
server/: CMakeLists.txt  README.md  vcpkg.json
server/configs/: bb.json
server/src/: CMakeLists.txt
server/src/ems/: CMakeLists.txt  ems_callbacks.cpp  ems_callbacks.h  ems_compositor.cpp  ems_compositor.h  ems_config.c  ems_config.h  ems_hmd.cpp  ems_hmd.h  ems_instance.cpp  ems_instance.h  ems_motion_controller.cpp  ems_motion_controller.h  ems_server_internal.h  ems_server_main.cpp
server/src/ems/gst/: CMakeLists.txt  ems_gstreamer_pipeline.c  ems_gstreamer_pipeline.h  ems_gstreamer_src.c  ems_gstreamer_src.h  ems_pipeline_args.c  ems_pipeline_args.h  ems_signaling_server.c  ems_signaling_server.h
server/src/ems/include/: CMakeLists.txt  ems_common.h
server/src/test/: CMakeLists.txt  webrtc_client.c
server/src/test_client/: CMakeLists.txt  webrtc_client.c
